@@ -204,6 +204,7 @@ class MainWindow(gtk.Window):
         self.connect( 'focus-out-event', self.lost_focus )
         self.connect('delete_event', self.close_program)
         self.connect('key_press_event', self._event_handler.key_press_event)
+        self.connect('key_release_event', self._event_handler.key_release_event)
         self.connect('configure_event', self._event_handler.resize_event)
 
         self._main_layout.connect('button_release_event',
